k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: practica
  labels:
    entorno: taller
    equipo: adso
    fecha: "2026-08-27"
