k8s/05-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-clusterip
  namespace: practica
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
